--- a/extra_files/changelog.txt
+++ b/extra_files/changelog.txt
@@ -8,5 +8,6 @@
     - Added new params.
         - Spectator Pass
         - Decomposition Multipliers
+    - Fixed issues with the file not properly pushing to the config.
     - Numberious bugs fixes.
     "
